frontend/deployment/kubernetes/flood-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flood-frontend
  namespace: flood-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: flood-frontend
  template:
    metadata:
      namespace: flood-frontend
      labels:
        app: flood-frontend
    spec:
      containers:
        - image: ghcr.io/openearthplatforminitiative/flood-frontend:0.0.1
          name: flood-frontend
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: flood-frontend
  namespace: flood-frontend
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: flood-frontend
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flood-frontend
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: HostRegexp(`flood-{env:[a-zA-Z0-9-]+}.openepi.io`) || Host(`flood.openepi.io`)
    services:
    - kind: Service
      name: flood-frontend
      port: 80
